# your-time-is-currency

./: README.md
client/: index.html  package-lock.json  package.json
client/crate/: Cargo.toml
client/crate/src/: consts.rs  lib.rs  messages.rs
client/crate/src/components/: enemy_controller.rs  follow.rs  mod.rs  owned_by.rs  player_controller.rs  speed.rs  time.rs  velocity.rs
client/crate/src/states/: game.rs  loading.rs  lobby.rs  mod.rs
client/crate/src/systems/: enemy_control.rs  follow.rs  mod.rs  player_control.rs  time.rs
client/static/: assets.txt
server/: index.js  package-lock.json  package.json
