[package]
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
categories = ["games"]
description = "Simple multiplayer game made with Oxygen game engine"
license = "MIT"
name = "your-time-is-currency"
readme = "./README.md"
repository = "https://github.com/PsichiX/your-time-is-currency"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.25"
oxygengine = { version = "0.3.7", features = ["web-composite-game"] }
byteorder = "1.3"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.5", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
]

[features]
default = ["console_error_panic_hook"]
